add copy to homepage

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <html>
 
   <head>
+    <link href='http://fonts.googleapis.com/css?family=Merriweather:400,400italic,700,700italic|Open+Sans:400italic,400,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="assets/css/css.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="UTF-8">
@@ -11,17 +12,56 @@
 
 <body>
 
-  <header>
+  <header class="header-homepage">
     <nav class="nav-homepage">
       <ul class="nav-ul-homepage">
-        <li>Home</li>
-        <li>Blog</li>
-        <li>Classes</li>
-        <li>Workshop</li>
-        <li>Store</li>
+        <li><a href="#">Home</a></a></li>
+        <li><a href="#">Blog</a></li>
+        <li><a href="#">Classes</a></li>
+        <li><a class="workshop-highlight" href="#">Workshop</a></li>
+        <li><a class="store-button" href="#">Store</a></li>
       </ul>
     </nav>
+    <div class="homepage-header-text">
+      <h1>Master Alex Dong</h1>
+      <h2>Fourth Generation Taijiquan Master</h2>
+    </div>
   </header>
+
+  <section class="history">
+    <div class="history-container">
+      <h1>Master Alex Dong is a fourth generation Taijiquan Master of the Dong (Tung) family.</h1>
+      <p>He started his formal training with his father, Grand Master Dong Zeng Chen at the age of five in Hebei Province, the heart of martial arts in China. In 1983, at the age of twelve, he moved to Honolulu, Hawaii where he continued his training with his father and also studied with his grand-father, Grand Master Dong Hu Ling who had a major influence on his learning. In 1991, Alex Dong was awarded the US National Tai Chi Chuan championship in moving push hands and the Best Martial Spirit Title for all competitors while representing the state of Hawaii.</p>
+    </div>
+  </section>
+
+  <section class="history-red">
+    <div class="history-container">
+      <h1>He started teaching at the age of 15 with his father</h1>
+      <p>where he assisted him in translation from Chinese to English during classes. In 1990 he started a class of his own in Hawaii, and has continued to teach ever since. In 2003, he relocated to New York City where he established his new school, the Alex Dong International Taijiquan Association. Genuine principles of taijiquan are taught and through that teaching Master Dong wants to spread and popularize the art of Taijiquan.</p>
+    </div>
+  </section>
+
+  <section class="history-quote">
+    <div class="history-quote-container">
+      <h1>“I think we should keep the true art and its traditional ways. The tradition is equally important as the art itself. The more people practicing the better.”</h1>
+      <h2>- Alex Dong</h2>
+    </div>
+  </section>
+
+  <section class="history-red">
+    <div class="history-container">
+      <h1>He founded the Tung Ying Jie Taiji Legacy in honour of his great-grandfather</h1>
+      <p>To keep the traditions of the Dong family style alive and to recognize Tung Ying Jie Taiji as one of the most important practitioners in Taiji history. Master Dong translated a large part of Tung Ying Jie's book titled Taijiquan Explained commonly referred to as The Red Book.</p>
+    </div>
+  </section>
+
+  <section class="history">
+    <div class="history-container">
+      <h1>He is a devoted teacher who gives to his students the real meaning of Taiji</h1>
+      <p>Infecting them with an enthusiasm to work harder and with greater confidence. He also underlines the role of the soft Yang form in improving both health and self-defence skills. Alex Dong leads seminars worldwide in the United States, Canada, the United Kingdom, Greece, the Czech Republic and in Asia.</p>
+    </div>
+  </section>
 
 </body>
 
