redesigned home page

--- a/index.html
+++ b/index.html
@@ -63,6 +63,28 @@
     </div>
   </section>
 
+  <section class="history-classes">
+    <div class="history-container">
+      <h1>Classes</h1>
+      <h2>Tuesday evenings from 6pm to 8pm. $150 (6 classes)</h2>
+      <p>440 Studios<br>440 Lafayette Sreet, New York NY 10003.<br>Directly across from the public theater, between Astor Place and 4th Street. Subway 8th st. on the W, R trains, and Astor Place on the 6 trains.</p>
+      <h3>For more information, please email <a href="mailto:alexdongtaiji@hotmail.com">alexdongtaiji@hotmail.com.</a></h3>
+      <h3>For classes around the world, please <a href="#">click here.</a></h3>
+    </div>
+  </section>
+
+  <footer>
+    <nav class="footer-homepage">
+      <ul class="footer-ul-homepage">
+        <li><a href="#">Home</a></a></li>
+        <li><a href="#">Blog</a></li>
+        <li><a href="#">Classes</a></li>
+        <li><a href="#">Workshop</a></li>
+        <li><a href="#">Store</a></li>
+      </ul>
+    </nav>
+  </footer>
+
 </body>
 
 </html>
