added classes page

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <ul class="nav-ul-homepage">
         <li><a href="#">Home</a></a></li>
         <li><a href="#">Blog</a></li>
-        <li><a href="#">Classes</a></li>
+        <li><a href="classes/">Classes</a></li>
         <li><a class="workshop-highlight" href="#">Workshop</a></li>
         <li><a class="store-button" href="#">Store</a></li>
       </ul>
