added store, workshop, legacy, store, classes pages

--- a/classes/index.html
+++ b/classes/index.html
@@ -15,14 +15,20 @@
   <header class="header-classes">
     <nav class="nav-homepage">
       <ul class="nav-ul-homepage">
-        <li><a href="#">Home</a></a></li>
-        <li><a href="#">Blog</a></li>
-        <li><a href="#">Classes</a></li>
-        <li><a class="workshop-highlight" href="#">Workshop</a></li>
-        <li><a class="store-button" href="#">Store</a></li>
+        <li><a href="http://www.alexdongtaiji.com">Home</a></a></li>
+        <li><a target="_blank" href="http://alexdongtaiji.tumblr.com">Blog</a></li>
+        <li><a href="../classes/">Classes</a></li>
+        <li><a href="../legacy/">Legacy</a></li>
+        <li><a class="workshop-highlight" href="../workshops/">Workshops</a></li>
+        <li><a class="store-button" href="../store/">Store</a></li>
       </ul>
     </nav>
   </header>
+
+  <div class="header-background">
+    <h1>Classes</h1>
+    <h3>New York City And Around The World</h3>
+  </div>
 
   <section class="history-classes">
     <div class="history-container classes-container">
@@ -38,7 +44,7 @@
       <h2>United States</h2>
       <ul class="classes-ul">
         <li><a href="#">Santa Barbara, California</a></li>
-        <li><a href="#">Utah And Colorado Borders</a></li>
+        <li><a href="#">Colorado And Utah Borders</a></li>
         <li><a href="#">Honolulu, Hawaii</a></li>
         <li><a href="#">White Birds, Idaho</a></li>
         <li><a href="#">Syracuse, New York</a></li>
@@ -51,12 +57,8 @@
         <li><a href="#">New Brunswick</a></li>
         <li><a href="#">Quebec</a></li>
       </ul>
-    </div>
-  </section>
 
-  <section class="north-america-classes world-classes">
-    <div class="america-container">
-      <h1>Rest Of The World</h1>
+      <h1 class="rest-of-the-world">Europe and South America</h1>
       <ul class="classes-ul">
         <li><a href="#">Belo Horizonte, Brazil</a></li>
         <li><a href="#">Zagreb, Croatia</a></li>
@@ -65,17 +67,19 @@
         <li><a href="#">Grenobble, France</a></li>
         <li><a href="#">Athens, Greece</a></li>
         <li><a href="#">Siena, Italy</a></li>
+      </ul>
     </div>
-  </section>
+   </section>
 
   <footer>
     <nav class="footer-homepage">
       <ul class="footer-ul-homepage">
-        <li><a href="#">Home</a></a></li>
-        <li><a href="#">Blog</a></li>
-        <li><a href="#">Classes</a></li>
-        <li><a href="#">Workshop</a></li>
-        <li><a href="#">Store</a></li>
+        <li><a href="http://www.alexdongtaiji.com">Home</a></a></li>
+        <li><a target="_blank" href="http://alexdongtaiji.tumblr.com">Blog</a></li>
+        <li><a href="../classes/">Classes</a></li>
+        <li><a href="../legacy/">Legacy</a></li>
+        <li><a href="../workshops/">Workshops</a></li>
+        <li><a href="../store/">Store</a></li>
       </ul>
     </nav>
   </footer>
