--- a/index.html
+++ b/index.html
@@ -15,11 +15,12 @@
   <header class="header-homepage">
     <nav class="nav-homepage">
       <ul class="nav-ul-homepage">
-        <li><a href="#">Home</a></a></li>
-        <li><a href="#">Blog</a></li>
+        <li><a href="http://www.alexdongtaiji.com">Home</a></a></li>
+        <li><a target="_blank" href="http://alexdongtaiji.tumblr.com">Blog</a></li>
         <li><a href="classes/">Classes</a></li>
-        <li><a class="workshop-highlight" href="#">Workshop</a></li>
-        <li><a class="store-button" href="#">Store</a></li>
+        <li><a href="legacy/">Legacy</a></li>
+        <li><a class="workshop-highlight" href="workshops/">Workshops</a></li>
+        <li><a class="store-button" href="store/">Store</a></li>
       </ul>
     </nav>
     <div class="homepage-header-text">
@@ -76,11 +77,12 @@
   <footer>
     <nav class="footer-homepage">
       <ul class="footer-ul-homepage">
-        <li><a href="#">Home</a></a></li>
-        <li><a href="#">Blog</a></li>
-        <li><a href="#">Classes</a></li>
-        <li><a href="#">Workshop</a></li>
-        <li><a href="#">Store</a></li>
+        <li><a href="http://www.alexdongtaiji.com">Home</a></a></li>
+        <li><a target="_blank" href="http://alexdongtaiji.tumblr.com">Blog</a></li>
+        <li><a href="classes/">Classes</a></li>
+        <li><a href="legacy/">Legacy</a></li>
+        <li><a href="workshops/">Workshops</a></li>
+        <li><a href="store/">Store</a></li>
       </ul>
     </nav>
   </footer>
