--- a/store/index.html
+++ b/store/index.html
@@ -26,20 +26,23 @@
   </header>
 
   <div class="header-background">
-    <h1>Workshops</h1>
+    <h1>Store</h1>
     <h3>Purchase Books and DVDs Created By Master Alex Dong</h3>
   </div>
 
-  <section class="history workshops">
-    <div class="history-container">
-      <a href="#"><h1>Westwater, Colorado & Utah Border</h1>
-      <h2>April 24th 2015 - May 2nd 2015</h2></a>
+  <section class="history-classes">
+    <div class="history-container store">
+      <h1>Books</h1>
+      <p>440 Studios<br>440 Lafayette Sreet, New York NY 10003.<br>Directly across from the public theater, between Astor Place and 4th Street. Subway 8th st. on the W, R trains, and Astor Place on the 6 trains.</p>
+      <h3>For more information, please email <a href="mailto:alexdongtaiji@hotmail.com">alexdongtaiji@hotmail.com.</a></h3>
+    </div>
+  </section>
 
-      <a href="#"><h1>European Tour 2015</h1>
-      <h2>June 20th 2015 - July 3rd 2015</h2></a>
-
-      <a href="#"><h1>Greece</h1>
-      <h2>September 28th 2015 - October 4th 2015</h2></a>
+  <section class="history-classes">
+    <div class="history-container store">
+      <h1>Books</h1>
+      <p>440 Studios<br>440 Lafayette Sreet, New York NY 10003.<br>Directly across from the public theater, between Astor Place and 4th Street. Subway 8th st. on the W, R trains, and Astor Place on the 6 trains.</p>
+      <h3>For more information, please email <a href="mailto:alexdongtaiji@hotmail.com">alexdongtaiji@hotmail.com.</a></h3>
     </div>
   </section>
 
