created store page, updated

--- a/store/index.html
+++ b/store/index.html
@@ -5,6 +5,7 @@
   <head>
     <link href='http://fonts.googleapis.com/css?family=Merriweather:400,400italic,700,700italic|Open+Sans:400italic,400,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="../assets/css/css.css">
+    <link rel="stylesheet" href="../assets/css/popup.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="UTF-8">
     <title>Alex Dong Taiji</title>
@@ -30,19 +31,102 @@
     <h3>Purchase Books and DVDs Created By Master Alex Dong</h3>
   </div>
 
-  <section class="history-classes">
+  <section class="history-classes store-section">
     <div class="history-container store">
       <h1>Books</h1>
-      <p>440 Studios<br>440 Lafayette Sreet, New York NY 10003.<br>Directly across from the public theater, between Astor Place and 4th Street. Subway 8th st. on the W, R trains, and Astor Place on the 6 trains.</p>
-      <h3>For more information, please email <a href="mailto:alexdongtaiji@hotmail.com">alexdongtaiji@hotmail.com.</a></h3>
+
+      <div class="store-book-container">
+        <h3>Red Book</h3>
+        <h4>$35.00</h4>
+        <img src="../assets/images/redbook.png">
+        <h5><a href="#redbook-popup" class="animated_popup book-details-link">Book Details</a></h5>
+        <div id="redbook-popup" style="display:none">
+          <p>Taiji can be practiced while walking, standing or lying down. Always use Taiji principles and work on Taiji, in any situation. For example, try to pick up a cup or glass using a lot of energy and then with very little. Pay attention while walking, are your steps heavy or light? Compare standing with knees locked and then bent, with hips relaxed or on one foot versus both. These are all excellent learning experiences.</p>
+        </div>
+      </div>
+
+      <div class="store-book-container">
+        <h3>Workshop Notes</h3>
+        <h4>$35.00</h4>
+        <img src="../assets/images/workshopnotes.png">
+        <h5><a href="#workshop-popup" class="animated_popup book-details-link">Book Details</a></h5>
+        <div id="workshop-popup" style="display:none">
+          <p>Master Alex Dong's new book, Taijiquan Explained - Workshop Notes is the most clearly written book on taijiquan that I have read. These are real notes from his real workshops over the past few years, I know because I was at many of them. His generosity in sharing the information in these notes with the greater Taiji community, not just his students, took courage and is unprecedented in his family and most masters in general. I can't recommend this book enough. I have it with me all the time, I quote it all the time, my students are quoting it all the time. - Toni DeMoulin</p>
+        </div>
+      </div>
+
+      <div class="store-book-container">
+        <h3>Taichi Explained</h3>
+        <h4>$35.00</h4>
+        <img src="../assets/images/taichiexplained.png">
+        <h5><a href="#taichiexplained-popup" class="animated_popup book-details-link">Book Details</a></h5>
+        <div id="taichiexplained-popup" style="display:none">
+          <p>This book includes many fundamentals on the body, mind and energies. Pictures (color) and instructions of every move in the slow form. There is also a section call the "Often Misunderstood", "Understand in Depth" and a chapter just on Push Hands training and strategies. A must have for new students who just learning or those who wants to improve their Slow Form. Great for the more advanced students to learn more about Push Hands and understand more depth.</p>
+        </div>
+      </div>
+
     </div>
   </section>
 
-  <section class="history-classes">
+  <section class="history-classes store-section">
     <div class="history-container store">
-      <h1>Books</h1>
-      <p>440 Studios<br>440 Lafayette Sreet, New York NY 10003.<br>Directly across from the public theater, between Astor Place and 4th Street. Subway 8th st. on the W, R trains, and Astor Place on the 6 trains.</p>
-      <h3>For more information, please email <a href="mailto:alexdongtaiji@hotmail.com">alexdongtaiji@hotmail.com.</a></h3>
+      <h1>DVDs</h1>
+
+      <div class="store-book-container">
+        <h3>Dong Slow And Fast Set</h3>
+        <h4>$30.00</h4>
+        <img src="../assets/images/tape1.png">
+        <h5><a href="#dongslowfast-popup" class="animated_popup book-details-link">Book Details</a></h5>
+        <div id="dongslowfast-popup" style="display:none">
+          <p>This DVD covers the Dong Family Slow Set (Orthodox style) and Dong Family Fast Form (slow & fast versions). Total running time: 42:42</p>
+        </div>
+      </div>
+      <div class="store-book-container">
+        <h3>Hao Style and Fa-Jing</h3>
+        <h4>$50.00</h4>
+        <img src="../assets/images/tape2.png">
+        <h5><a href="#haostyle-popup" class="animated_popup book-details-link">Book Details</a></h5>
+        <div id="haostyle-popup" style="display:none">
+          <p>Includes the Dong Family Hard Form (traditional Hao style), and the Dong Family Fa-Jing form (slow & fast) which was created by Alex's great grandfather. Total running time: 34:38</p>
+        </div>
+      </div>
+      <div class="store-book-container">
+        <h3>Weapons Set</h3>
+        <h4>$65.00</h4>
+        <img src="../assets/images/tape3.png">
+        <h5><a href="#weapons-popup" class="animated_popup book-details-link">Book Details</a></h5>
+        <div id="weapons-popup" style="display:none">
+          <p>Sabre, advanced sabre, sword, sticks, and spear forms feature on this DVD and all forms are demonstrated in full, providing a rare insight into advanced taiji practice. Total running time: 37:17</p>
+        </div>
+      </div>
+      <div class="store-book-container">
+        <h3>Dong History Tape</h3>
+        <h4>$65.00</h4>
+        <img src="../assets/images/tape4.png">
+        <h5><a href="#donghistory-popup" class="animated_popup book-details-link">Book Details</a></h5>
+        <div id="donghistory-popup" style="display:none">
+          <p>Follow the history of Four Generations of the Dong Family, featuring Dong (Tung) Ying Chieh, Dong Hu (Tung Fu) Ling, and Dong Zeng Chen performing the 108 sequence form of the Traditional Yang Style Tai Chi Chuan.</p>
+        </div>
+      </div>
+      <div class="store-book-container">
+        <h3>Three Treasures</h3>
+        <h4>$30.00</h4>
+        <img src="../assets/images/tape5.png">
+        <h5><a href="#threetreasures-popup" class="animated_popup book-details-link">Book Details</a></h5>
+        <div id="threetreasures-popup" style="display:none">
+          <p>Peng, Lu, Ze, An - Hard Qi Gong - Taiji Gong.</p>
+        </div>
+      </div>
+      <div class="store-book-container">
+        <h3>Dong Fast & Fajin</h3>
+        <h4>$40.00</h4>
+        <img src="../assets/images/tape6.png">
+        <h5><a href="#dongslowfast-popup" class="animated_popup book-details-link">Book Details</a></h5>
+        <div id="dongslowfast-popup" style="display:none">
+          <p>A updated version of the Dong Family Fast Form with the Dong Family Fajin Form.</p>
+        </div>
+      </div>
+
     </div>
   </section>
 
@@ -58,7 +142,86 @@
       </ul>
     </nav>
   </footer>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8/jquery.min.js"></script>
+  <script src="../assets/js/jquery.popup.js"></script>
+  <script>
+    $(function(){
 
+      /*-------------------------------
+
+        GENERAL EXAMPLES
+
+      -------------------------------*/
+
+      // Default usage
+      $('.default_popup').popup();
+
+      // Animated popup
+      $('.animated_popup').popup({
+        show        : function($popup, $back){
+
+          var plugin = this,
+            center = plugin.getCenter();
+
+          $popup
+            .css({
+              top     : - $popup.children().outerHeight(),
+              left    : center.left,
+              opacity : 1
+            })
+            .animate({top : center.top}, 500, 'easeOutBack', function(){
+              // Call the open callback
+              plugin.o.afterOpen.call(plugin);
+            });
+
+        }
+      });
+
+      // Call ALL the callbacks
+      $('.callback_popup').popup({
+        beforeOpen          : function(type){
+          console.log('beforeOpen -', type);
+        },
+        afterOpen           : function(){
+          console.log('afterOpen');
+        },
+        beforeClose         : function(){
+          console.log('beforeClose');
+        },
+        afterClose          : function(){
+          console.log('afterClose');
+        }
+      });
+
+      // Error popup
+      $('.error_popup').popup({
+        error   : function(content, type){
+
+          // Just call open again, it'll replace the content
+          this.open('<h1>ERROR!</h1><p>Content "'+content+'" of type "'+type+'" could not be loaded.</p>', 'html');
+        }
+      });
+
+    });
+
+    /*---------------------
+
+      JQUERY EASING
+
+    */
+
+    $.extend($.easing, {
+      easeOutBack: function (x, t, b, c, d, s) {
+        if (s == undefined) s = 1.70158;
+        return c*((t=t/d-1)*t*((s+1)*t + s) + 1) + b;
+      },
+      easeInBack: function (x, t, b, c, d, s) {
+        if (s == undefined) s = 1.70158;
+        return c*(t/=d)*t*((s+1)*t - s) + b;
+      }
+    });
+
+  </script>
 </body>
 
 </html>
