--- a/classes/index.html
+++ b/classes/index.html
@@ -32,15 +32,15 @@
 
   <section class="history-classes">
     <div class="history-container classes-container">
+      <h1>New York City</h1>
       <h2>Tuesday evenings from 6pm to 8pm. $150 (6 classes)</h2>
-      <p>440 Studios<br>440 Lafayette Sreet, New York NY 10003.<br>Directly across from the public theater, between Astor Place and 4th Street. Subway 8th st. on the W, R trains, and Astor Place on the 6 trains.</p>
+      <a href="https://www.google.com/maps/place/440+Studios/@40.729541,-73.992244,15z/data=!4m2!3m1!1s0x0:0x38d9b08a7982056e" target="_blank"><p>440 Studios<br>440 Lafayette Sreet, New York NY 10003.</a><br>Directly across from the public theater, between Astor Place and 4th Street. Subway 8th st. on the W, R trains, and Astor Place on the 6 trains.</p>
       <h3>For more information, please email <a href="mailto:alexdongtaiji@hotmail.com">alexdongtaiji@hotmail.com.</a></h3>
     </div>
   </section>
 
   <section class="north-america-classes">
     <div class="america-container">
-      <h1>North America</h1>
       <h2>United States</h2>
       <ul class="classes-ul">
         <li><a href="#">Santa Barbara, California</a></li>
@@ -58,7 +58,7 @@
         <li><a href="#">Quebec</a></li>
       </ul>
 
-      <h1 class="rest-of-the-world">Europe and South America</h1>
+      <h2 class="rest-of-the-world">Europe and South America</h1>
       <ul class="classes-ul">
         <li><a href="#">Belo Horizonte, Brazil</a></li>
         <li><a href="#">Zagreb, Croatia</a></li>
